--- a/shard.yml
+++ b/shard.yml
@@ -2,7 +2,7 @@ name: front-matter-markd
 version: 0.1.0
 
 authors:
-  - your-name-here <your-email-here>
+  - takanotume24 <takanotume24@gmail.com>
 
 crystal: 0.35.1
 
